<resources>
    <string name="app_name">Dotify</string>
    <string name="change_user">change user</string>
    <string name="first_aavenger">first_avenger</string>
    <string name="first_avenger">first_avenger</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="_3674_plays">3674 plays</string>
    <string name="shape_of_you">Shape of You</string>
    <string name="album_cover_picture">album cover picture</string>
    <string name="play_button">play button</string>
    <string name="back_button">back button</string>
    <string name="next_button">next button</string>
    <string name="name_of_song">Name of song</string>
    <string name="shuffle_list">Shuffle List</string>
    <string name="name_of_artist">Name of Artist</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="shuffle">shuffle</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="profile_statistics">Profile Statistics</string>
    <string name="about">About</string>
    <string name="spider_man">Spider-Man</string>
    <string name="age_21">Age: 21</string>
    <string name="joined_05_08_2021">Joined: 05/08/2021</string>
    <string name="email_spidey_spiderman_com">Email: spidey@spiderman.com</string>
    <string name="spider_man_image">Spider-Man</string>
    <string name="play_count_4413">Play count: 4413</string>
    <string name="author_arjun_aggarwal">Author: Arjun Aggarwal</string>
    <string name="website_arjunaggarwal99_githuib_io">Website: arjunaggarwal99.githuib.io</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="help">Help</string>
    <string name="height">Height: 5\' 10\"</string>
    <string name="website_arjunaggarwal99_github_io">Website: arjunaggarwal99.github.io</string>
    <string name="version_2_0">Version: 2.0</string>
    <string name="statistics">Statistics</string>
    <string name="spidy">spidy</string>
    <string name="Name">Spider Man</string>
    <string name="username">Username: spidy</string>
    <string name="platform">Platform: 8.21</string>
    <string name="hasNose">Do I have a nose?: true</string>
    <string name="loading">Loading User Profile data...</string>
    <string name="error_icon">Error icon</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="new_uploaded_music">New Uploaded Music</string>
    <string name="new_song_channel_description">This is a channel that notifies when you have a new song released</string>
</resources>
