<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical"
    android:layout_marginBottom="500dp"
    android:layout_marginEnd="150dp"
    android:padding="20dp">

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:padding="20dp"/>

    <Button
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_statistics"
        android:padding="20dp"/>

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:padding="20dp"/>
</LinearLayout>