<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_avenger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/changeButton"
        app:layout_constraintBottom_toBottomOf="@+id/changeButton"/>

    <EditText
        android:id="@+id/newId"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_avenger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/changeButton"
        app:layout_constraintBottom_toBottomOf="@+id/changeButton"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/songName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeButton"
        app:srcCompat="@drawable/cover"
        android:contentDescription="@string/album_cover_picture" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/shape_of_you"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/ed_sheeran"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/plays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songName" />

    <TextView
        android:id="@+id/plays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/_3674_plays"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistName" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/plays"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/back_button" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintTop_toBottomOf="@+id/plays"
        app:layout_constraintLeft_toRightOf="@+id/backButton"
        app:layout_constraintRight_toLeftOf="@id/nextButton"
        app:srcCompat="@drawable/play1"
        android:contentDescription="@string/play_button" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plays"
        app:layout_constraintLeft_toRightOf="@+id/playButton"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/next"
        android:contentDescription="@string/next_button" />


</androidx.constraintlayout.widget.ConstraintLayout>