<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCreator"
        android:text="@string/author_arjun_aggarwal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWebsite"
        android:text="@string/website_arjunaggarwal99_github_io"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tvCreator"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvVersion"
        android:text="@string/version_2_0"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvWebsite"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvVersion"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>